2007-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/LinkedFilesFolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs: Make sure
	  GetParentObject works for files external to projects. Fixes bug #82804.
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectNodeBuilder.cs,
	  MonoDevelop.Ide.Gui/IdeStartup.cs: Fix warnings.

2007-09-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Implemented 82241: Can't
	  navigate to the base method.

2007-09-10  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Templates/FileTemplate.cs: Add additional check to
	  IsValidName.
	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs: Add some more
	  substitution tags. New AddStandardHeader attribute can be used to enable
	  stanadrd headers; it defaults to disabled.
	* MonoDevelop.Ide.Templates/ParentProjectFileTemplateCondition.cs: Replace
	  RelativePath filter with ExcludedCreationPaths, PermittedCreationPaths,
	  RequiredFiles and ExcludedFiles filters.
	* MonoDevelop.Ide.Templates/CodeTranslationFileDescriptionTemplate.cs,
	  MonoDevelop.Ide.Templates/CodeDomFileDescriptionTemplate.cs: Set
	  AddStandardHeader to true if unset (these templates are always code
	  files).
	* MonoDevelop.Ide.Templates/PartialTypeFileTemplateCondition.cs: Add a FIXME
	  note.
	* MonoDevelop.Ide.Gui.Dialogs/NewFileDialog.cs: Fix missing null assignment
	  bug that made text field uneditable after selecting template with
	  IsFixedName set to true.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: When restoring the active file
	  after opening a solution, make sure the document is not already
	  disposed. Should fix bug #82538. Also, store line/column information of
	  open files in the solution user preferences. 

2007-09-10   <> 

	* MonoDevelop.Ide.Tasks/UserTasksView.cs,