@@ -1,3 +1,8 @@
+2007-09-14  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Fixed 82823: Can't go to
+	  class declaration.
+
 2007-09-12  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Ide.Gui.Pads.ProjectPad/LinkedFilesFolderNodeBuilder.cs,
